# ansible-docker-media-stack

./: README.md  README.org  playbook.yaml  playbook.yml  pyproject.toml
.github/workflows/: ci.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
roles/docker-container/tasks/: homer.yml  main.yml  overseerr.yml  portainer.yml  prowlarr.yml  radarr.yml  sonarr.yml  traefik.yml  transmission-openvpn.yml  vaultwarden.yml
roles/system/tasks/: remove_snap.yml
